--- a/categories.html
+++ b/categories.html
@@ -17,13 +17,14 @@
   <body>
     <nav class="site-header sticky-top py-1 bg-dark">
       <div class="container d-flex flex-column flex-md-row justify-content-between">
-        <a class="py-2 d-none d-md-inline-block" href="index.html">Inicio</a>
+        <a class="py-2 d-none d-md-inline-block" href="home.html">Inicio</a>
         <a class="py-2 d-none d-md-inline-block" href="categories.html">Categorías</a>
         <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
         <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
         <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
       </div>
     </nav>
+
     <main role="main" class="pb-5">
         <div class="text-center p-4">
             <h2>Categorías</h2>
@@ -68,11 +69,12 @@
                 </div>
             </div>
             <div class="row">
-                <div class="list-group" id="cat-list-container">
+                 <div class="list-group" id="cat-list-container"> <!--aca pone las distintas categorias pasadas en categories.js -->
                 </div>
             </div>
         </div>
     </main>
+    
     <footer class="text-muted bg-light">
       <div class="container">
         <p class="float-right">
