--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 <body class="login">
        
         <form class="form-login" action="home.html">
-            <img src="img/logo-jap.png" alt="logo JAP" class="logoJap">
-            <h2>Iniciar Sesión</h2>
+            <img src="img/logo-jap.png" alt="logo JAP" class="logoJap"><br>
+            <h2>Iniciar Sesión</h2><br>
             <input type="email" name="usuario" placeholder="Ingrese email" required> <br><br>
             <input type="password" name="contraseña" placeholder="Ingrese cotraseña" required> <br><br>  
-            <p><input type="checkbox">Recordarme</p>
+            <p><input type="checkbox">Recordarme</p> <!-- no hace nada por ahora-->
             <button type="submit" value="Enviar">Enviar</button>
 
         </form>
