--- a/home.html
+++ b/home.html
@@ -21,12 +21,14 @@
         <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
         <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
         <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
+        <a class="py-2 d-none d-md-inline-block" href="index.html" onclick="borrarInfo()">Salir</a>
+        <p class="nombre" id='info'>Usuario</p>
       </div>
     </nav>
     <main role="main">
       <section class="jumbotron text-center">
         <div class="m-5">
-          <h1></h1>
+          <h1 ></h1>
         </div>
       </section>
       <div class="album py-5 bg-light">
@@ -103,7 +105,8 @@
       </div>
     </footer>
     <script src="js/jquery-3.4.1.min.js"></script>
-    <script src="js/bootstrap.bundle.min.js"></script>
+    <!-- <script src="js/bootstrap.bundle.min.js"></script> -->
     <script src="js/init.js"></script>
+    <script src='js/login.js'></script>
   </body>
 </html>
