--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/album/">
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <!-- <link href="css/bootstrap.min.css" rel="stylesheet"> -->
     <link href="css/styles.css" rel="stylesheet">
 </head>
 <body class="login">
@@ -17,12 +17,13 @@
         <form class="form-login" action="home.html">
             <img src="img/logo-jap.png" alt="logo JAP" class="logoJap"><br>
             <h2>Iniciar Sesión</h2><br>
-            <input type="email" name="usuario" placeholder="Ingrese email" required> <br><br>
-            <input type="password" name="contraseña" placeholder="Ingrese cotraseña" required> <br><br>  
-            <p><input type="checkbox">Recordarme</p> <!-- no hace nada por ahora-->
-            <button type="submit" value="Enviar">Enviar</button>
+            <input type="email" name="usuario" id="email" placeholder="Ingrese email" required> <br><br>
+            <input type="password" name="contraseña" id="contraseña" placeholder="Ingrese cotraseña" required> <br><br>  
+            <!-- <p><input type="checkbox">Recordarme</p> -->
+            <button type="submit" value="Enviar" id='ir' onclick="guardarInfo()">Enviar</button>
 
         </form>
     
 </body>
+<script src='/js/login.js'></script>
 </html>
