--- a/login.html
+++ b/login.html
@@ -43,6 +43,8 @@
       <h4 class="alert-heading">¡A trabajar! :)</h4>
       <p>Esta sección corresponde a: Entrega 1 (Fecha de entrega: 08/08/2021).</p>
       <hr>
+      <!--ESTO SE HACE EN INDEX.HTML-->
+      
       <p class="mb-0">Para saber qué debes hacer, fijate en la actividad en CREA correspondiente a esta entrega.</p>
     </div>
   </div>
