--- a/product-info.html
+++ b/product-info.html
@@ -23,6 +23,9 @@
       <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
       <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
       <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
+      <a class="py-2 d-none d-md-inline-block" href="index.html" onclick="borrarInfo()">Salir</a>
+      <p class="nombre" id='info'>Usuario</p>
+      
     </div>
   </nav>
   
@@ -93,6 +96,7 @@
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/init.js"></script>
   <script src="js/product-info.js"></script>
+  <script src='js/login.js'></script>
 </body>
 
 </html>
