--- a/cart.html
+++ b/cart.html
@@ -66,7 +66,7 @@
   <script src="js/dropzone.js"></script>
   <script src="js/init.js"></script>
   <script src="js/cart.js"></script>
-  <script src='js/login.js'></script>
+  <script src='js/my-profile.js'></script>
 </body>
 
 </html>
