--- a/categories.html
+++ b/categories.html
@@ -91,6 +91,6 @@
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/init.js"></script>
     <script src="js/categories.js"></script>
-    <script src='js/login.js'></script>
+    <script src='js/my-profile.js'></script>
   </body>
 </html>
