--- a/category-info.html
+++ b/category-info.html
@@ -85,7 +85,7 @@
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/init.js"></script>
   <script src="js/category-info.js"></script>
-  <script src='js/login.js'></script>
+  <script src='js/my-profile.js'></script>
 </body>
 
 </html>
