--- a/home.html
+++ b/home.html
@@ -107,6 +107,6 @@
     <script src="js/jquery-3.4.1.min.js"></script>
     <!-- <script src="js/bootstrap.bundle.min.js"></script> -->
     <script src="js/init.js"></script>
-    <script src='js/login.js'></script>
+    <script src='js/my-profile.js'></script>
   </body>
 </html>
