--- a/products.html
+++ b/products.html
@@ -45,13 +45,13 @@
               <div class="col text-right">
                   <div class="btn-group btn-group-toggle mb-4" data-toggle="buttons">
                       <label class="btn btn-light active" id="sortAsc" >
-                          <input type="radio" name="options" autocomplete="off" checked><i class="fas fa-sort-amount-down mr-1"></i>$
+                          <input type="radio" name="options" autocomplete="off" checked><i class="fas fa-sort-amount-down-alt mr-1"></i>$
                       </label>
                       <label class="btn btn-light" id="sortDesc" >
                           <input type="radio" name="options" autocomplete="off"><i class="fas fa-sort-amount-up mr-1"></i>$
                       </label>
-                      <label class="btn btn-light" id="sortByPrice" >
-                          <input type="radio" name="options" autocomplete="off"><i class="fas fa-sort-amount-down mr-1"></i>Rel.
+                      <label class="btn btn-light" id="sortByRelevance" >
+                          <input type="radio" name="options" autocomplete="off"><i class="fas fa-sort-amount-up mr-1"></i>Rel.
                       </label>
                   </div>
               </div>
@@ -78,6 +78,12 @@
                 </div>
               </div>
           </div>
+          <div class="row"> <!--buscador-->
+                  <div class="col text-right">
+                    <input type="text" placeholder="buscar" id="buscador" onkeyup="buscar()">
+                  </div>
+                
+          </div>
           <div class="row">
                <div class="list-group" id="prod-list-container"> <!--aca pone los distintos productos pasadas en productos.js -->
               </div>
@@ -99,6 +105,6 @@
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/init.js"></script>
     <script src="js/products.js"></script>
-    <script src='js/login.js'></script>
+    <script src='js/my-profile.js'></script>
   </body>
 </html>
