--- a/sell.html
+++ b/sell.html
@@ -219,6 +219,6 @@
       <script src="js/dropzone.js"></script>
       <script src="js/init.js"></script>
       <script src="js/sell.js"></script>
-      <script src='js/login.js'></script>
+      <script src='js/my-profile.js'></script>
     </body>
 </html>
