Entrega2 con Desafiate

--- a/product-info.html
+++ b/product-info.html
@@ -51,23 +51,23 @@
           <p id="productCost"></p>
         </dd>
 
-        <dt>Cantidad de productos en la categoría</dt>
+        <dt>Cantidad de productos en stock</dt>
         <dd>
-          <p id="productSoldCount"></p>
+          <p id="productSoldCount">gggg</p>
         </dd>
-
-        <!-- <dt>Criterio para incluir productos en esta categoría</dt>
-        <dd>
-          <p id="productCriteria"></p>
-        </dd> -->
 
         <dt>Imágenes ilustrativas</dt>
         <dd>
           <div class="row text-center text-lg-left pt-2" id="productImagesGallery">
           </div>
         </dd>
+
       </dl>
-      <a type="button" class="btn btn-light btn-lg btn-block" href="products.html">Ver productos</a>
+
+      <div class="container" id="comentarios"> 
+        
+      </div>
+      <a type="button" class="btn btn-light btn-lg btn-block" href="products.html">Volver a productos</a>
     </div>
   </main>
 
