--- a/products.html
+++ b/products.html
@@ -61,7 +61,7 @@
               <div class="col-md-6 col-sm-12 mb-1 container">
                 <div class="row container p-0 m-0">
                   <div class="col">
-                    <p class="font-weight-normal text-right my-2">Price</p>
+                    <p class="font-weight-normal text-right my-2">Precio</p>
                   </div>
                   <div class="col">
                     <input class="form-control" type="number" placeholder="min." id="rangeFilterPriceMin">
@@ -80,7 +80,7 @@
           </div>
           <div class="row"> <!--buscador-->
                   <div class="col text-right">
-                    <input type="text" placeholder="buscar" id="buscador" onkeyup="buscar()">
+                    <input type="text" placeholder=" buscar " id="buscador">
                   </div>
                 
           </div>
