--- a/product-info.html
+++ b/product-info.html
@@ -63,9 +63,29 @@
           </div>
         </dd>
 
-      </dl>
+        <dt>Comentarios</dt>
+        <dd>
+          <div class="container" id="comentarios"> 
+        </dd>
 
-      <div class="container" id="comentarios"> 
+        <dt>Nuevo comentario</dt>
+        <dd>
+          <form id="form-comentario">
+            <textarea placeholder="Ingrese su comentario" row="4" class="form-control" id="nuevoComentario" ></textarea>
+            <select name="puntaje" id="puntaje">
+              <option value="1">1</option>
+              <option value="2">2</option>
+              <option value="3">3</option>
+              <option value="4">4</option>
+              <option value="5">5</option>
+            </select>
+            <button type="submit" id= "enviarComentario" onclick="addComent()">Enviar</button>
+          </form>
+        </dd>
+
+      </dl>
+    
+   
         
       </div>
       <a type="button" class="btn btn-light btn-lg btn-block" href="products.html">Volver a productos</a>
