Entrega3 con Desafiate v2
json productos y comentarios,
estrellas
nuevo comentario y mostrarlo

--- a/product-info.html
+++ b/product-info.html
@@ -54,7 +54,7 @@
 
         <dt>Cantidad de productos en stock</dt>
         <dd>
-          <p id="productSoldCount">gggg</p>
+          <p id="productSoldCount"></p>
         </dd>
 
         <dt>Imágenes ilustrativas</dt>
@@ -70,22 +70,23 @@
 
         <dt>Nuevo comentario</dt>
         <dd>
-          <form id="form-comentario">
-            <textarea placeholder="Ingrese su comentario" row="4" class="form-control" id="nuevoComentario" ></textarea>
-            <div>
-              <p style="padding: 0%;">Puntuación:</p>
-              <select name="puntaje" id="puntaje">
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5</option>
-              </select>
-            </div>
-            
-          </br></br>
-            <button type="button" id= "enviarComentario" onclick="addComent()">Enviar</button>
-          </form>
+          <div class="nuevoComent">
+            <form id="form-comentario">
+              <textarea placeholder="Ingrese su comentario" row="4" class="form-control" id="nuevoComentario" ></textarea>
+              <div>
+                <p >Puntuación:
+                <select name="puntaje" id="puntaje">
+                  <option value="1">1</option>
+                  <option value="2">2</option>
+                  <option value="3">3</option>
+                  <option value="4">4</option>
+                  <option value="5">5</option>
+                </select> </p>
+              </div>
+              
+              <button type="button" id= "enviarComentario" onclick="addComent()">Enviar</button>
+            </form>
+          </div>
         </dd>
 
       </dl>
