--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body class="login">
        
         <form class="form-login" action="home.html">
-            <img src="img/logo-jap.png" alt="logo JAP" class="logoJap"><br>
+            <img src="img/LogoJaP.png" alt="logo JAP" class="logoJap"><br>
             <h2>Iniciar Sesión</h2><br>
             <input type="email" name="usuario" id="email" placeholder="Ingrese email" required> <br><br>
             <input type="password" name="contraseña" id="contraseña" placeholder="Ingrese cotraseña" required> <br><br>  
