--- a/products.html
+++ b/products.html
@@ -89,11 +89,12 @@
                   </div>
                 
           </div>
-            <div class="row">
-              <div class="list-group" id="prod-list-container"> <!--aca pone los distintos productos pasadas en productos.js -->
-              </div>
+          
+          <div class="container">
+            <div class="row" id="prod-list-container"> <!--aca pone los distintos productos pasadas en productos.js -->
             </div>
           </div>
+        </div>
   </main>
 
     <footer class="text-muted bg-light">
