--- a/my-profile.html
+++ b/my-profile.html
@@ -117,7 +117,7 @@
             <div class="row">
               <div class="col-md-6 mb-3">
                 <label for="mail">email</label>
-                <input type="email" class="form-control" id="mail" placeholder="" value="" >
+                <input type="email" class="form-control" id="mail" placeholder="" value="" disabled>
                 <div class="invalid-feedback">
                   Ingresa un email.
                 </div>
