--- a/cart.html
+++ b/cart.html
@@ -12,7 +12,7 @@
   <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/album/">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
-
+  <link href="css/font-awesome.min.css" rel="stylesheet">
   <style>
     .form-element{
       font: gray;
@@ -48,7 +48,7 @@
         
         <div class="dropdown">
           <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
-            <img src="img/default-avatar.png" alt="" width="24" height="24" class="d-inline-block align-text-top">
+            <img id="imgMenu" src="img/default-avatar.png" alt="" width="24" height="24" class="d-inline-block align-text-top">
           </a>
           </a>
           <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="dropdownMenuLink">
@@ -217,7 +217,7 @@
                               </form>
                             </div>
                             <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                            <!-- <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button> -->
                             <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Guardar</button>
                             </div>
                         </div>
